# abuddy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.lambda  PLAN.md  README.md  aip-c01-exam-guide-structured.md  aip-c01-exam-guide.json  claude-cert-exam-guide.json  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
CCA/: README.md
CCA/ai-cc/: cca-f-exam-guide-2026.md
CCA/anthropic/: claude-partner-network.md
CCA/claudecertifications/: domains.md  exam-guide.md  index.md
CCA/devto/: inside-cca-program.md
CCA/flashgenius/: cca-foundations-guide.md
CCA/lowcode-agency/: how-to-become-claude-certified-architect.md
CCA/skilljar-anthropic/: index.md
CCA/skilljar/building-with-claude-api/: index.md
CCA/skilljar/claude-101/: index.md
CCA/skilljar/claude-code-in-action/: index.md
CCA/skilljar/intro-to-agent-skills/: index.md
CCA/the-ai-corner/: claude-certified-architect-curriculum-2026.md
scripts/: .skilljar_session.json  check_cost.bat  clean_skilljar_md.py  delete_bad_cca_questions.py  deploy_lambda.py  download_skilljar.py  fetch_concept_docs.py  generate_from_user_questions.py  generate_questions.py  inspect_graph.py  migrate_exam_id_claude_cert_to_CCA.py  migrate_questions_exam_id.py  migrate_s3_exam_prefix.py  precache_tts.py  review_summaries.py  run.bat  seed_concept_graph.py  setup_aws.py  setup_cloudfront.py  skilljar_to_docs.py  translate_questions.py
src/abuddy/: config.py  main.py
tests/: conftest.py  test_cca_content.py  test_quiz_engine.py  test_schedule_model.py
(+33 files in other folders)
